--- a/index.html
+++ b/index.html
@@ -591,11 +591,10 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="#" class="social-link">GitHub</a>
-                <a href="#" class="social-link">LinkedIn</a>
-                <a href="#" class="social-link">Twitter</a>
+                <a href="https://github.com/dennisarias23" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/dennis-arias/" class="social-link">LinkedIn</a>
             </div>
-            <p class="copyright">© 2025 YourName. All rights reserved.</p>
+            <p class="copyright">© 2025 Dennis Arias. All rights reserved.</p>
         </div>
     </footer>
 
