--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="https://github.com/dennisarias23" class="social-link">GitHub</a>
-                <a href="https://www.linkedin.com/in/dennis-arias/" class="social-link">LinkedIn</a>
+                <a href="https://github.com/dennisarias23" target="_blank" rel="noopener noreferrer" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/dennis-arias/" target="_blank" rel="noopener noreferrer" class="social-link">LinkedIn</a>
             </div>
             <p class="copyright">© 2025 Dennis Arias. All rights reserved.</p>
         </div>
